# traefik-query-params-plugin

./: .traefik.yml  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: add.rs  main.rs  remove.rs  util.rs
