[package]
name = "traefik-query-params"
version = "0.1.0"
edition = "2024"

[dependencies]
form_urlencoded = "1.2.1"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
indexmap = { version = "2.9.0", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.140"
traefik_wasm_api = "1.0.1"
url = "2.5.4"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
strip = true
